crates/solite-fmt/src/snapshots/solite_fmt__tests__alter_table_add_column.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- alter table t add column c integer not null default 0

-- Output:
alter table t add column c integer not null default 0;
