crates/solite-fmt/src/snapshots/solite_fmt__tests__alter_table_drop_column.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- alter table t drop column c

-- Output:
alter table t drop column c;
