crates/solite-fmt/src/snapshots/solite_fmt__tests__alter_table_rename.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- alter table t rename to t2

-- Output:
alter table t rename to t2;
