crates/solite-fmt/src/snapshots/solite_fmt__tests__alter_table_rename_column.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- alter table t rename column a to b

-- Output:
alter table t rename column a to b;
