crates/solite-fmt/src/snapshots/solite_fmt__tests__analyze_table.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- analyze t

-- Output:
analyze t;
