crates/solite-fmt/src/snapshots/solite_fmt__tests__arithmetic_expressions.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a + b, c - d, e * f, g / h, i % j from t

-- Output:
select
  a + b,
  c - d,
  e * f,
  g / h,
  i % j
from t;
