crates/solite-fmt/src/snapshots/solite_fmt__tests__attach_database.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- attach database 'other.db' as other

-- Output:
attach database 'other.db' as other;
