crates/solite-fmt/src/snapshots/solite_fmt__tests__begin_deferred.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- begin deferred

-- Output:
begin deferred;
