crates/solite-fmt/src/snapshots/solite_fmt__tests__begin_immediate.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- begin immediate

-- Output:
begin immediate;
